--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,8 @@
     "next/core-web-vitals",
     "prettier"
   ],
+  "parser": "@typescript-eslint/parser",
+  "plugins": ["@typescript-eslint"],
   "rules": {
     "prefer-const": "error",
     "no-unused-vars": "off",
